--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
-        "bootstrap": "^4.6.0"
+        "bootstrap": "^4.6.0",
+        "sweetalert2": "^10.15.7"
     }
 }
