--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.0",
+        "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.46"
     },
     "require-dev": {
